--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,42 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.pnpm-debug.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Solidity
+/build
+cache/
+artifacts/
+typechain/
+typechain-types/
+
+# Testing
+coverage/
+
+# Hardhat
+coverage.json
+typechain-types/
+typechain/
+
+# Misc
+.DS_Store
+*.pem
