--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ethers": "^5.7.2",
-    "web3modal": "^1.9.12",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.3.4",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.12.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "axios": "^1.3.4"
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -26,4 +27,4 @@
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
   }
-} 
+}
